@@ -61,6 +61,7 @@ debian-installer (20050120) UNRELEASED; urgency=low
       remove their KERNELVERSION_2.4 variables and kernel-build-2.4*
       build-dependencies.
     - Switch libparted1.6-0 build-dependency to libparted1.6-12.
+    - Fix support for multiple words in KERNELVERSION.
   * Christian Perrier
     - Add 7 missing characters to installer/build/needed-characters/ar
       Thanks to Naidim Shaikli and Arabeyes contributors
